manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: valerauko-net
  annotations:
    net.valerauko/test: hoge
  labels:
    app: valerauko.net
    role: static
spec:
  replicas: 2
  selector:
    matchLabels:
      app: valerauko.net
      role: static
  template:
    metadata:
      labels:
        app: valerauko.net
        role: static
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app: valerauko.net
                    role: static
                topologyKey: kubernetes.io/hostname
      containers:
        - name: valerauko-net
          image: valerauko/valerauko.net:sha-6067ccf
          ports:
            - name: http
              containerPort: 80
          livenessProbe:
            httpGet:
              path: /
              port: http
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 2
          readinessProbe:
            httpGet:
              path: /
              port: http
            failureThreshold: 5
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
