manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: valerauko-net
  labels:
    app: valerauko.net
    role: static
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: valerauko.net
    role: static
