manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: valerauko-net
  labels:
    app: valerauko.net
    role: static
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  tls:
    - hosts:
        - valerauko.net
      secretName: valerauko-net-tls
    - hosts:
        - balint.erdos.tech
      secretName: erdos-tech-tls
  rules:
    - host: balint.erdos.tech
      http:
        paths:
          - backend:
              service:
                name: valerauko-net
                port:
                  name: http
            path: /
            pathType: Prefix
    - host: valerauko.net
      http:
        paths:
          - backend:
              service:
                name: valerauko-net
                port:
                  name: http
            path: /
            pathType: Prefix
